force-app/main/default/objects/Account/fields/Adresse_Cour_Pays_WF__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Cour_Pays_WF__c</fullName>
    <formula>IF(  CodePays__c  &lt;&gt; &quot;&quot;,  CodePays__r.Name  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse Cour Pays WF</label>
    <type>Text</type>
</CustomField>