force-app/main/default/objects/Account/fields/Adresse_courante_concatenee__c.field-meta.xml
<CustomField>
    <fullName>Adresse_courante_concatenee__c</fullName>
    <description>Champ récapitulant l&apos;adresse courante, utilisée pour le mini page layout</description>
    <formula>Adresse_Rue__pc &amp;&quot; &quot;&amp;  Rue_2__c &amp;&quot; &quot;&amp; Ligne_3__c &amp;&quot; &quot;&amp; Adresse_code_postal__pc &amp;&quot; &quot;&amp;  Adresse_Ville__pc &amp;&quot; &quot;&amp; R_gion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse courante concaténée</label>
    <type>Text</type>
</CustomField>