force-app/main/default/objects/Account/fields/Adresse_Etat1__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Etat1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse courante: Etat</label>
    <referenceTo>Etat__c</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>