force-app/main/default/objects/Account/fields/Adresse_Etat_WF__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Etat_WF__c</fullName>
    <formula>IF(  Adresse_facturation_Etat1__c &lt;&gt; &quot;&quot;,   Adresse_facturation_Etat1__r.Name   , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse Etat WF</label>
    <type>Text</type>
</CustomField>