force-app/main/default/objects/Account/fields/Adresse_facturation_Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>Adresse_facturation_Code_Postal__c</fullName>
    <label>Adresse facturation: Code Postal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>