force-app/main/default/objects/Account/fields/Adresse_facturation_d_partement__c.field-meta.xml
<CustomField>
    <fullName>Adresse_facturation_d_partement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse facturation: département</label>
    <referenceTo>D_partement__c</referenceTo>
    <relationshipLabel>Comptes (Adresse facturation: département)</relationshipLabel>
    <relationshipName>Comptes1</relationshipName>
    <type>Lookup</type>
</CustomField>