force-app/main/default/objects/Account/fields/Adresse_facturation_Etat1__c.field-meta.xml
<CustomField>
    <fullName>Adresse_facturation_Etat1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse facturation: Etat</label>
    <referenceTo>Etat__c</referenceTo>
    <relationshipLabel>Comptes (Adresse facturation: Etat)</relationshipLabel>
    <relationshipName>Comptes1</relationshipName>
    <type>Lookup</type>
</CustomField>