force-app/main/default/objects/Account/fields/Adresse_facturation_Ligne_2__c.field-meta.xml
<CustomField>
    <fullName>Adresse_facturation_Ligne_2__c</fullName>
    <label>Adresse facturation: Ligne 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>