force-app/main/default/objects/Account/fields/Adresse_facturation_NPAI__c.field-meta.xml
<CustomField>
    <fullName>Adresse_facturation_NPAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adresse facturation: NPAI</label>
    <type>Checkbox</type>
</CustomField>