force-app/main/default/objects/Account/fields/Adresse_facturation_Pays__c.field-meta.xml
<CustomField>
    <fullName>Adresse_facturation_Pays__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse facturation: Pays</label>
    <referenceTo>Pays__c</referenceTo>
    <relationshipLabel>Comptes (Adresse facturation: Pays)</relationshipLabel>
    <relationshipName>Comptes1</relationshipName>
    <type>Lookup</type>
</CustomField>