force-app/main/default/objects/Account/fields/Adresse_facturation_R_gion__c.field-meta.xml
<CustomField>
    <fullName>Adresse_facturation_R_gion__c</fullName>
    <formula>IF(  Adresse_facturation_d_partement__c  &lt;&gt; Null,  Adresse_facturation_d_partement__r.R_gion__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse facturation: Région</label>
    <type>Text</type>
</CustomField>