force-app/main/default/objects/Account/fields/Adresse_Facturation_Rue__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Facturation_Rue__c</fullName>
    <label>Adresse Facturation: Rue</label>
    <length>120</length>
    <type>Text</type>
</CustomField>