force-app/main/default/objects/Account/fields/Adresse_facturation_ville__c.field-meta.xml
<CustomField>
    <fullName>Adresse_facturation_ville__c</fullName>
    <label>Adresse facturation: ville</label>
    <length>50</length>
    <type>Text</type>
</CustomField>