force-app/main/default/objects/Account/fields/Adresse_Pays_WF__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Pays_WF__c</fullName>
    <formula>IF( Adresse_facturation_Pays__c  &lt;&gt; &quot;&quot;,  Adresse_facturation_Pays__r.Name , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse Pays WF</label>
    <type>Text</type>
</CustomField>