force-app/main/default/objects/Account/fields/Alternance__c.field-meta.xml
<CustomField>
    <fullName>Alternance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternance</label>
    <type>Checkbox</type>
</CustomField>