force-app/main/default/objects/Account/fields/Annee_validite__c.field-meta.xml
<CustomField>
    <fullName>Annee_validite__c</fullName>
    <description>L’année de la remise</description>
    <label>Année de validité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPT-AVA10</fullName>
            </value>
            <value>
                <fullName>CPT-AVA20</fullName>
            </value>
            <value>
                <fullName>CPT-AVA30</fullName>
            </value>
            <value>
                <fullName>CPT-AVA40</fullName>
            </value>
            <value>
                <fullName>CPT-AVA50</fullName>
            </value>
            <value>
                <fullName>CPT-AVA60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>