force-app/main/default/objects/Account/fields/CA_Export__c.field-meta.xml
<CustomField>
    <fullName>CA_Export__c</fullName>
    <label>CA Export (€)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>