force-app/main/default/objects/Account/fields/CA_Formation_continue__c.field-meta.xml
<CustomField>
    <fullName>CA_Formation_continue__c</fullName>
    <label>CA EML réalisé (€)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>