force-app/main/default/objects/Account/fields/CA_Inter_ann_e_en_cours__c.field-meta.xml
<CustomField>
    <fullName>CA_Inter_ann_e_en_cours__c</fullName>
    <label>dont CA Inter année en cours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>