force-app/main/default/objects/Account/fields/CA_Intra_3_derni_res_ann_es__c.field-meta.xml
<CustomField>
    <fullName>CA_Intra_3_derni_res_ann_es__c</fullName>
    <label>dont CA Intra 3 dernières années</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>