force-app/main/default/objects/Account/fields/Cat_gorie_Cible__c.field-meta.xml
<CustomField>
    <fullName>Cat_gorie_Cible__c</fullName>
    <label>Catégorie Cible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cibles sectorielles</fullName>
            </value>
            <value>
                <fullName>Sociétés proches de l&apos;école</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>