force-app/main/default/objects/Account/fields/Cessation_d_activit__c.field-meta.xml
<CustomField>
    <fullName>Cessation_d_activit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ce champ permet de renseigner si la société à cesser son activité ou pas</description>
    <label>Cessation d&apos;activité</label>
    <type>Checkbox</type>
</CustomField>