force-app/main/default/objects/Account/fields/Code_Compte__c.field-meta.xml
<CustomField>
    <fullName>Code_Compte__c</fullName>
    <description>Compteur compte tiers ( par workflow, on remplit le champ code agresso tiers société)</description>
    <displayFormat>9{000000}</displayFormat>
    <label>Code_Compte</label>
    <type>AutoNumber</type>
</CustomField>