force-app/main/default/objects/Account/fields/Code_NAF__c.field-meta.xml
<CustomField>
    <fullName>Code_NAF__c</fullName>
    <formula>CodeAPE__r.CODE_APE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code NAF</label>
    <type>Text</type>
</CustomField>