force-app/main/default/objects/Account/fields/Code_NAICS__c.field-meta.xml
<CustomField>
    <fullName>Code_NAICS__c</fullName>
    <label>Code NAICS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>31-33</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>44-45</fullName>
            </value>
            <value>
                <fullName>48-49</fullName>
            </value>
            <value>
                <fullName>51</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
            <value>
                <fullName>53</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>56</fullName>
            </value>
            <value>
                <fullName>61</fullName>
            </value>
            <value>
                <fullName>62</fullName>
            </value>
            <value>
                <fullName>71</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>81</fullName>
            </value>
            <value>
                <fullName>92</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>