force-app/main/default/objects/Account/fields/Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal__c</fullName>
    <label>Adresse courante: Code Postal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>