force-app/main/default/objects/Account/fields/Code_tiers_societe__c.field-meta.xml
<CustomField>
    <fullName>Code_tiers_societe__c</fullName>
    <description>Ce champ est automatiquement remplit par workflow depuis compteur compte</description>
    <label>Code tiers société</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>