force-app/main/default/objects/Account/fields/CodeAPE__c.field-meta.xml
<CustomField>
    <fullName>CodeAPE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NAF</label>
    <referenceTo>NAF__c</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>