force-app/main/default/objects/Account/fields/CodeNAFProche__c.field-meta.xml
<CustomField>
    <fullName>CodeNAFProche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NAF Activité réelle</label>
    <referenceTo>NAF__c</referenceTo>
    <relationshipLabel>Comptes (NAF)</relationshipLabel>
    <relationshipName>Comptes1</relationshipName>
    <type>Lookup</type>
</CustomField>