force-app/main/default/objects/Account/fields/CodePays__c.field-meta.xml
<CustomField>
    <fullName>CodePays__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adresse courante: Pays</label>
    <referenceTo>Pays__c</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>