force-app/main/default/objects/Account/fields/Coeur_de_cible_Events__c.field-meta.xml
<CustomField>
    <fullName>Coeur_de_cible_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coeur de cible Events</label>
    <type>Checkbox</type>
</CustomField>