force-app/main/default/objects/Account/fields/Commentaire_partenariat__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_partenariat__c</fullName>
    <label>Commentaire partenariat</label>
    <type>TextArea</type>
</CustomField>