force-app/main/default/objects/Account/fields/Commentaire_Taxe__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_Taxe__c</fullName>
    <label>Commentaire Taxe</label>
    <type>TextArea</type>
</CustomField>