force-app/main/default/objects/Account/fields/Composition_de_l_quipe__c.field-meta.xml
<CustomField>
    <fullName>Composition_de_l_quipe__c</fullName>
    <label>Composition de l&apos;équipe</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>