force-app/main/default/objects/Account/fields/Compte_a_valider__c.field-meta.xml
<CustomField>
    <fullName>Compte_a_valider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compte à valider</label>
    <type>Checkbox</type>
</CustomField>