force-app/main/default/objects/Account/fields/Compte_consolidation_taxe_fundraising__c.field-meta.xml
<CustomField>
    <fullName>Compte_consolidation_taxe_fundraising__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte principal taxe / fundraising</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comptes (Compte consolidation taxe / fundraising)</relationshipLabel>
    <relationshipName>Comptes1</relationshipName>
    <type>Lookup</type>
</CustomField>