force-app/main/default/objects/Account/fields/Compte_Groupe__c.field-meta.xml
<CustomField>
    <fullName>Compte_Groupe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compte Groupe</label>
    <type>Checkbox</type>
</CustomField>