force-app/main/default/objects/Account/fields/Compte_principal_ID_RAPPORT__c.field-meta.xml
<CustomField>
    <fullName>Compte_principal_ID_RAPPORT__c</fullName>
    <formula>IF( ISBLANK(Parent.Name) , Id, 
IF( ISBLANK( Parent.Parent.Name),Parent.Id, 
IF( ISBLANK( Parent.Parent.Parent.Name),Parent.Parent.Id,Parent.Parent.Parent.Id 
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compte principal ID RAPPORT</label>
    <type>Text</type>
</CustomField>