force-app/main/default/objects/Account/fields/Compte_Principal_Rapport__c.field-meta.xml
<CustomField>
    <fullName>Compte_Principal_Rapport__c</fullName>
    <formula>IF(   ISBLANK(Parent.Name) ,   Name  ,
 IF(  ISBLANK( Parent.Parent.Name),Parent.Name,
 IF(  ISBLANK( Parent.Parent.Parent.Name),Parent.Parent.Name,Parent.Parent.Parent.Name
  )))</formula>
    <label>Compte principal Rapport</label>
    <type>Text</type>
</CustomField>