force-app/main/default/objects/Account/fields/ComptePrincipal__c.field-meta.xml
<CustomField>
    <fullName>ComptePrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte principal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Compte principal)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>