force-app/main/default/objects/Account/fields/Conseil_strat_gie__c.field-meta.xml
<CustomField>
    <fullName>Conseil_strat_gie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conseil, stratégie</label>
    <type>Checkbox</type>
</CustomField>