force-app/main/default/objects/Account/fields/Contact_Principal_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Contact_Principal_Fundraising__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Principal Fundraising</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>