force-app/main/default/objects/Account/fields/Contrat_cadre__c.field-meta.xml
<CustomField>
    <fullName>Contrat_cadre__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permet d’identifier si un compte a un contrat cadre avec EMLYON</description>
    <label>Contrat cadre</label>
    <type>Checkbox</type>
</CustomField>