force-app/main/default/objects/Account/fields/Convsta_Modifie_par_Convsta__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Modifie_par_Convsta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique si le compte a été modifié par Convsta</description>
    <label>Modifié par Convsta</label>
    <type>Checkbox</type>
</CustomField>