force-app/main/default/objects/Account/fields/Convsta_Niveau_Alerte_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Niveau_Alerte_Entreprise__c</fullName>
    <inlineHelpText>Signale au gestionnaire si des étudiants ont éprouvé des problèmes au sein de cette entreprise pendant leur expérience professionnelle.</inlineHelpText>
    <label>Niveau d&apos;Alerte Entreprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vert</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Rouge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>