force-app/main/default/objects/Account/fields/Convsta_roll_max_date_de_stage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_roll_max_date_de_stage__c</fullName>
    <label>Date du dernier stage</label>
    <type>Date</type>
</CustomField>