force-app/main/default/objects/Account/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <formula>CodePays__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pays</label>
    <type>Text</type>
</CustomField>