force-app/main/default/objects/Account/fields/Cumul_Intra__c.field-meta.xml
<CustomField>
    <fullName>Cumul_Intra__c</fullName>
    <label>Cumul CA Intra</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Accord de principe, Contrat Signé</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Intra-entreprises</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessOrEqual</operation>
        <value>9/1/2013</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>