force-app/main/default/objects/Account/fields/Cybers_curit__c.field-meta.xml
<CustomField>
    <fullName>Cybers_curit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cybersécurité</label>
    <type>Checkbox</type>
</CustomField>