force-app/main/default/objects/Account/fields/D_partement_pour_WF__c.field-meta.xml
<CustomField>
    <fullName>D_partement_pour_WF__c</fullName>
    <formula>IF( Adresse_facturation_d_partement__c &lt;&gt; &quot;&quot;,   Adresse_facturation_d_partement__r.Name  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Département pour WF</label>
    <type>Text</type>
</CustomField>