force-app/main/default/objects/Account/fields/Data_Digital__c.field-meta.xml
<CustomField>
    <fullName>Data_Digital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data, Digital</label>
    <type>Checkbox</type>
</CustomField>