force-app/main/default/objects/Account/fields/Data_Loader_Util__c.field-meta.xml
<CustomField>
    <fullName>Data_Loader_Util__c</fullName>
    <label>Data Loader Util</label>
    <type>TextArea</type>
</CustomField>