force-app/main/default/objects/Account/fields/Date_de_cr_ation_de_la_soci_t__c.field-meta.xml
<CustomField>
    <fullName>Date_de_cr_ation_de_la_soci_t__c</fullName>
    <label>Date de création de la société</label>
    <type>Date</type>
</CustomField>