force-app/main/default/objects/Account/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Ce champ permet de sélectionner le libellé des départements</description>
    <label>Adresse courante: Département</label>
    <referenceTo>D_partement__c</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>