force-app/main/default/objects/Account/fields/Dernier_motif_de_refus__c.field-meta.xml
<CustomField>
    <fullName>Dernier_motif_de_refus__c</fullName>
    <description>Rempli par workflow lors de l’abandon de l’opportunité à partir du champ « motif de fermeture de l’opportunité » et ce a des fins de reporting</description>
    <label>Dernier motif de refus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>