force-app/main/default/objects/Account/fields/Description_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Description_de_l_entreprise__c</fullName>
    <label>Description de l&apos;entreprise</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>