force-app/main/default/objects/Account/fields/Donateur__c.field-meta.xml
<CustomField>
    <fullName>Donateur__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ancien intitulé du champ : &apos;Donateur&apos;. A été modifié à la demande de l&apos;EM Lyon (fiche 1535)</description>
    <label>Partenaire B2B</label>
    <type>Checkbox</type>
</CustomField>