force-app/main/default/objects/Account/fields/Effectif_Groupe__c.field-meta.xml
<CustomField>
    <fullName>Effectif_Groupe__c</fullName>
    <label>Effectif Groupe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>