force-app/main/default/objects/Account/fields/Effectif_sur_la_France__c.field-meta.xml
<CustomField>
    <fullName>Effectif_sur_la_France__c</fullName>
    <label>Effectif sur la France Groupe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>