force-app/main/default/objects/Account/fields/Embauche_des_dipl_m_s__c.field-meta.xml
<CustomField>
    <fullName>Embauche_des_dipl_m_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Embauche des diplômés</label>
    <type>Checkbox</type>
</CustomField>