force-app/main/default/objects/Account/fields/Entit_g_rant_la_taxe_dans_un_groupe__c.field-meta.xml
<CustomField>
    <fullName>Entit_g_rant_la_taxe_dans_un_groupe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entité gérant la taxe dans un groupe</label>
    <type>Checkbox</type>
</CustomField>