force-app/main/default/objects/Account/fields/Entreprise_actuelle__c.field-meta.xml
<CustomField>
    <fullName>Entreprise_actuelle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entreprise actuelle</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts Individuels</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>