force-app/main/default/objects/Account/fields/Entreprise_verseuse_ann_e_actuelle__c.field-meta.xml
<CustomField>
    <fullName>Entreprise_verseuse_ann_e_actuelle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entreprise verseuse année actuelle</label>
    <type>Checkbox</type>
</CustomField>