force-app/main/default/objects/Account/fields/Est_un_OCTA__c.field-meta.xml
<CustomField>
    <fullName>Est_un_OCTA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indique si ce compte est un OCTA</description>
    <label>Est un OCTA</label>
    <type>Checkbox</type>
</CustomField>