force-app/main/default/objects/Account/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance</label>
    <type>Checkbox</type>
</CustomField>