force-app/main/default/objects/Account/fields/For_Mass_Update__c.field-meta.xml
<CustomField>
    <fullName>For_Mass_Update__c</fullName>
    <label>For Mass Update</label>
    <type>TextArea</type>
</CustomField>