force-app/main/default/objects/Account/fields/Graduate_track__c.field-meta.xml
<CustomField>
    <fullName>Graduate_track__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graduate track</label>
    <type>Checkbox</type>
</CustomField>