force-app/main/default/objects/Account/fields/IMBA__c.field-meta.xml
<CustomField>
    <fullName>IMBA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IMBA</label>
    <type>Checkbox</type>
</CustomField>