force-app/main/default/objects/Account/fields/Indice_de_proximit__c.field-meta.xml
<CustomField>
    <fullName>Indice_de_proximit__c</fullName>
    <label>Indice de proximité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Skyline</fullName>
            </value>
            <value>
                <fullName>Oxygène</fullName>
            </value>
            <value>
                <fullName>Crayon</fullName>
            </value>
            <value>
                <fullName>Incity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>