force-app/main/default/objects/Account/fields/Innovation_R_D__c.field-meta.xml
<CustomField>
    <fullName>Innovation_R_D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Innovation, R&amp;D</label>
    <type>Checkbox</type>
</CustomField>