force-app/main/default/objects/Account/fields/Int_r_t_M_cenat__c.field-meta.xml
<CustomField>
    <fullName>Int_r_t_M_cenat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intérets mécénat</label>
    <type>Checkbox</type>
</CustomField>