force-app/main/default/objects/Account/fields/Int_r_ts_sponsoring__c.field-meta.xml
<CustomField>
    <fullName>Int_r_ts_sponsoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intérêts sponsoring</label>
    <type>Checkbox</type>
</CustomField>