force-app/main/default/objects/Account/fields/International_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>International_Recruiter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Recruiter</label>
    <type>Checkbox</type>
</CustomField>