force-app/main/default/objects/Account/fields/Juridique__c.field-meta.xml
<CustomField>
    <fullName>Juridique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Juridique</label>
    <type>Checkbox</type>
</CustomField>