force-app/main/default/objects/Account/fields/La_Toile__c.field-meta.xml
<CustomField>
    <fullName>La_Toile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>La Toile</label>
    <type>Checkbox</type>
</CustomField>